# finufft

./: .gitignore  CMakeLists.txt  CMakePresets.json  finufftConfig.cmake
include/cufinufft/: defs.h  utils.h
include/windows/sys/: time.h
src/cuda/: CMakeLists.txt  profile.cu
